--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(KnittingPathFinder)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(KnittingPathFinder main.cpp)
+add_executable(KnittingPathFinder src/main.cpp include/PathFinder.hpp src/PathFinder.cpp)
