--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.9)
 project(KnittingPathFinder)
 
-set(CMAKE_CXX_STANDARD 17)
+set(EXECUTABLE_OUTPUT_PATH "../bin")
 
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_BUILD_TYPE Release)
+
 find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
